# audit-stream-py

./: CROSS_MODEL_BRIEF.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: producer.py
src/audit_stream/: __init__.py  __main__.py  app.py  models.py  store.py
tests/: test_app.py  test_store.py
